error messages (need to fix vertical alignment)

--- a/app/assets/stylesheets/show.css
+++ b/app/assets/stylesheets/show.css
@@ -84,12 +84,14 @@
 	text-align: left;
 }
 /* Displays message indicating successful post */
-#alert-container{
-  margin-top: 10px;
+.alert-container{
+  margin-top: 20px;
   position: absolute;
   width: 50%;
   left: 25%;
+  z-index: 5;
 }
+
 .history-reply{
   border: 1px solid rgb(194, 194, 194);
   border-radius: 4px;
